hphp/test/zend/good/ext/mbstring/tests/mb_ereg_search_xxx.php.skipif
<?hh
extension_loaded('mbstring') || die('skip mbstring not available');
function_exists('mb_ereg_search') || die("skip\n");
