hphp/test/zend/bad/ext/mbstring/tests/mb_regex_set_options.php.skipif
<?php
extension_loaded('mbstring') or die("skip mbstring not available\n");
function_exists('mb_regex_set_options') or die("skip\n");
?>